chore: :construction: Stop gap commit. Nothing important

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -430,3 +430,14 @@ button:hover{
   margin-top: 9%;
   letter-spacing: 2px;
 }
+
+table,
+td {
+    border: 1px solid #333;
+}
+
+thead,
+tfoot {
+    background-color: #333;
+    color: #fff;
+}
